--- a/about.html
+++ b/about.html
@@ -79,31 +79,32 @@
             <!-- Start Header Navigation -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu"> <i class="fa fa-bars"></i> </button>
-                <a class="navbar-brand" href="index.html"><img style="width: 150px" src="images/brand/logo-1.png" class="logo logo-scrolled" alt=""> </a>
+                <a class="navbar-brand" href="index.html"><img style="width: 150px" src="images/brand/logo-1.png"
+                 class="logo logo-scrolled"  alt=""> </a>
             </div>
             <!-- End Header Navigation -->
             <!-- Megamenu -->
             <div class="collapse navbar-collapse" id="navbar-menu">
                 <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
                     <li class="active ">
-                        <a href="index.html">Home</a>
+                        <a href="index.html" >Home</a>
                     </li>
                     <li class="dropdown">
                         <a href="" class="dropdown-toggle" data-toggle="dropdown">Our Story</a>
                         <ul class="dropdown-menu">
-                            <li><a href="about.html">About</a></li>
-                            <li><a href="mission.html">Mission</a></li>
-                            <li><a href="unique.html">How Are We Unique</a></li>
-                            <li><a href="culture.html">Our Culture</a></li>
-                            <li><a href="clients.html">Our Clients</a></li>
+                           <li><a href="about.html">About</a></li>
+                           <li><a href="mission.html">Mission</a></li>
+                           <li><a href="unique.html">How Are We Unique</a></li>
+                           <li><a href="culture.html">Our Culture</a></li>
+                           <li><a href="clients.html">Our Clients</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
                         <a href="services.html" class="dropdown-toggle" data-toggle="dropdown">Services</a>
                         <ul class="dropdown-menu">
-                            <li><a href="services.html#staffing">Staffing</a></li>
-                            <li><a href="services.html#transportation">Transportation</a></li>
-                            <li><a href="services.html#behavior">Behavior Supports</a></li>
+                           <li><a href="services.html#staffing">Staffing</a></li>
+                           <li><a href="services.html#transportation">Transportation</a></li>
+                           <li><a href="services.html#behavior">Behavior Supports</a></li>
                         </ul>
                     </li>
                     <li>
@@ -112,12 +113,12 @@
                     <li class="dropdown">
                         <a href="" class="dropdown-toggle" data-toggle="dropdown">Career Gateway</a>
                         <ul class="dropdown-menu">
-                            <li><a href="testimonial.html">Testimonials</a></li>
+                           <li><a href="testimonial.html">Testimonials</a></li>
                             <li><a href="application.html">Application for Employment</a></li>
                         </ul>
                     </li>
-                    <li class="">
-                        <a href="contact.html">Contact Us</a>
+                     <li class="">
+                        <a href="contact.html" >Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -158,15 +159,8 @@
         <div class="container">
             <div class="row intro-title">
                 <div class="col-sm-12 text-center">
-                    <h1 class="title">Our Culture</h1>
+                    <h1 class="title">About The Outcome Network </h1>
                 </div>
-                <!--
-                <div class="col-sm-12">
-                    <div class="row">
-                        <div class="col-sm-12 col-md-8 col-md-offset-2 text-center"><span class="sub-title">Our culture is unique. Our drive to empower. Our passion, to make a difference.</span></div>
-                    </div>
-                </div>
--->
             </div>
         </div>
     </section>
@@ -175,35 +169,29 @@
     <section class="">
         <div class="container">
             <div class="row">
-                <div class="col-md-12  text-left">
-                    <p class="lead">We will foster a positive team environment by:</p>
-                    <ul class="ml-5">
-                        <li>Putting ethics above all else</li>
-                        <li>Treating everyone fairly</li>
-                        <li>Supporting each other</li>
-                        <li>Balancing work and life</li>
-                    </ul>
+                <div class="col-md-12 text-left mt-1 ">
+                   <p>The Outcome Network is a unique company designed to meet the changing needs in the human services field.  The Outcome Network    has recognized and met the needs of individuals, service providers, families, and staff, to enhance the services being provided to individuals experiencing disabilities. We are a leader in workforce solutions including temporary staffing services; behavior Support; transportation of people supported to their community of belonging; Volunteer supports; translation services ; online training; compliance and program consulting; . The services we provide are as unique and diverse as the agencies and people we work with and are tailored to meet each agency’s specific requirements. Many customers often use our supports heavily through times of change, expansion, or uncertainty and then adjust when needs stabilize. Other customers use us permanently for certain tasks or supports as part of their organizational design. Through training, consulting, or customized supports, The Outcome Network will help you gain the skills, understanding, and confidence to succeed in this field. Our consultants, trainers, and staffing experts are excited and ready to assist you in your areas of need! We hope you will consider The Outcome Network as a partner in providing excellent services to individuals experiencing disabilities. We look forward to earning and keeping your business!</p>
                 </div>
             </div>
         </div>
     </section>
     <section class="inner-intro small-intro theme-bg">
-        <div class="container">
-            <div class="row intro-title">
-                <div class="col-sm-12 text-center">
-                    <h1 class="title">The Outcome Network</h1>
-                </div>
-                <div class="col-sm-12">
-                    <div class="row">
-                        <div class="col-sm-12 text-center"><span class="sub-title">Our network connect people experiencing disability to support and services all across Ontario</span></div>
+            <div class="container">
+               <div class="row intro-title">
+                  <div class="col-sm-12 text-center">
+                     <h1 class="title">The Outcome Network</h1>
+                  </div>
+                  <div class="col-sm-12">
+                     <div class="row">
+                        <div class="col-sm-12 text-center"><span class="sub-title">The most powerful business network on earth</span></div>
                         <div style="display: flex;justify-content: center; width: 100%;padding-top: 30px;">
                             <a href="#" class=" btn btn-default btn-outline animated btn-radius white-border theme-bg white-text fill-white">Submit Resume <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
                         </div>
-                    </div>
-                </div>
+                     </div>
+                  </div>
+               </div>
             </div>
-        </div>
-    </section>
+         </section>
     <!-- End Our service -->
     <!-- Footer -->
     <footer class="footer-dark">
