--- a/clients.html
+++ b/clients.html
@@ -92,11 +92,11 @@
                     <li class="dropdown">
                         <a href="" class="dropdown-toggle" data-toggle="dropdown">Our Story</a>
                         <ul class="dropdown-menu">
+                           <li><a href="about.html">About</a></li>
                            <li><a href="mission.html">Mission</a></li>
                            <li><a href="unique.html">How Are We Unique</a></li>
-                           <li><a href="culture.html">Culture</a></li>
-                           <li><a href="team.html">Leadership Team</a></li>
-                           <li><a href="joint_commision.html">Joint Commission</a></li>
+                           <li><a href="culture.html">Our Culture</a></li>
+                           <li><a href="clients.html">Our Clients</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -107,18 +107,14 @@
                            <li><a href="services.html#behavior">Behavior Supports</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown">
-                        <a href="" class="dropdown-toggle" data-toggle="dropdown">Scholarship</a>
-                        <ul class="dropdown-menu">
-                           <li><a href="">Scholarship Application</a></li>
-                        </ul>
+                    <li>
+                        <a href="employers.html">Employers</a>
                     </li>
                     <li class="dropdown">
                         <a href="" class="dropdown-toggle" data-toggle="dropdown">Career Gateway</a>
                         <ul class="dropdown-menu">
-                           <li><a href="">Testimonials</a></li>
-                           <li><a href="">Application for Employment</a></li>
-                           <li><a href="">Jobs Link</a></li>
+                           <li><a href="testimonial.html">Testimonials</a></li>
+                            <li><a href="application.html">Application for Employment</a></li>
                         </ul>
                     </li>
                      <li class="">
@@ -139,8 +135,8 @@
                 <h6 class="text-uppercase">OFFICE 01</h6>
                 <ul class="list-unstyled address">
                     <li><i class="lnr lnr-map-marker"></i><span>387 Madison Ave, New York, NY 10118</span></li>
-                    <li><i class="lnr lnr-envelope"></i><span>support@yourname.com</span></li>
-                    <li><i class="icon-phone"></i><span>(+91) 123-456-7890</span></li>
+                    <li><i class="lnr lnr-envelope"></i><span>theoutcomenetwork@gmail.com</span></li>
+                    <li><i class="icon-phone"></i><span>416-995-9105</span></li>
                 </ul>
             </div>
             <div class="widget">
@@ -163,7 +159,7 @@
         <div class="container">
             <div class="row intro-title">
                 <div class="col-sm-12 text-center">
-                    <h1 class="title">Joint Commission Policy Statement</h1>
+                    <h1 class="title">OUR CLIENTS</h1>
                 </div>
             </div>
         </div>
@@ -174,42 +170,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-left mt-1 ">
-                   <p>The Outcome Network is committed to providing a higher standard of service and to the delivery of safe, quality patient care.  The Outcome Network complies with the Joint Commission’s Standards for Staffing Services.  As our customer, you can have confidence that the processes within The Outcome Network support that the supplemental staff working in your organization have met the requirements established by the Joint Commission.  To assure compliance with the Joint Commission Standards for Staffing Services, The Outcome Network provides the customer a written description of the following service features.</p>
-                   <br>
-                   <h5 class="mb-2">Subcontractors</h5>
-                   <p>The Outcome Network will not engage subcontractors to provide Assigned Providers unless agreed to in advance by the customer.</p>
-                   <br>
-                   <h5 class="mb-2">Floating</h5>
-                   <p>Assigned Providers may only be placed in assignments that match the job description for which The Outcome Network assigns them; if an Assigned Provider is asked to float to another department with the customer, the department must be a like department or unit and the float provider must have demonstrated previous competency and have the appropriate certifications, credentials for that department/unit. Assigned Providers should only be floated to areas of comparable clinical diagnoses and acuities.</p>
-                   <br>
-                   <h5 class="mb-2">Competency Review</h5>
-                   <p>It is the responsibility of The Outcome Network to conduct and finalize the pre-employment assessment of the Assigned Provider’s competence based on the techniques, procedures, technology and skills needed to provide care, treatment and services to the populations served by the customer upon completion of The Outcome Network’ orientation.</p>
-                   <p>It shall be the responsibility of the customer to cooperate in a review or evaluation of each Assigned Provider, relative to the provider’s ability to perform specific job functions upon completion of provider’s assignment or shift. The Outcome Network relies on the customer’s feedback in order to accurately assess and re-assess the competence of the Assigned Provider on an ongoing basis based on the customer’s report of clinical performance.</p>
-                   <br>
-                   <h5 class="mb-2">Orientation of Providers</h5>
-                   <p>The Outcome Network will provide all new providers with an orientation to the company’s policies and procedures.  It shall be the responsibility of customer to orient assigned providers to the facility and its rules and regulations and to acquaint them with the facility policies and procedures, including dress code, physical layout and equipment and to validate competency and ability of Assigned Provider to properly use equipment.</p>
-                   <br>
-                   <h5 class="mb-2">Providers and Independent Contractors</h5>
-                   <p>As the provider of staffing services, The Outcome Network will be the employer of Assigned Providers and shall not by reason of their temporary assignment with the customer through The Outcome Network become providers of the customer. At its sole discretion The Outcome Network reserves the right to utilize Independent Contractors in addition to its providers, to assist in the provision of all agreed upon Supplemental Staffing services.</p>
-                   <br>
-                   <h5 class="mb-2">Incident, Error, Tracking System</h5>
-                   <p>Upon notification of Incidents and or Errors, The Outcome Network shall document and track all unexpected incidents, including errors, sentinel events and other events, such as injuries and safety hazards related to the care and services provided, utilizing its data gathering tools. Information gathered tracked and analyzed is to shared and reported appropriately to customers, regulatory bodies and the Joint Commission as required.</p>
-                   <br>
-                   <h5 class="mb-2">Communicating Occupational Safety Hazards/Events</h5>
-                   <p>It shall be the responsibility of the customer to notify The Outcome Network within 24 hours of the event; any competency issues, incidents, and/or complaints related to the Assigned Provider and/or The Outcome Network Customer agrees to initiate communication with The Outcome Network whenever an incident/injury report related to the Assigned Provider is completed</p>
-                   <br>
-                   <h5 class="mb-2">Requirements for Staff Specified</h5>
-                   <p>The requirements of staff sent to the customer by The Outcome Network are to be determined by the customer as part of the written agreement between the two parties. It is The Outcome Network’ obligation to comply with the requirements of the customer by supplying staff that have the documented competencies, credentials, health screening and experience to satisfy the requirements specified by the customer in order to deliver safe care to the population being served.</p>
-                   <br>
-                   <h5 class="mb-2">Conflicts of Interest</h5>
-                   <p>The Outcome Network to the best of its ability identifies conflicts of interest. The Outcome Network discloses all conflicts of interest to its clients. The Outcome Network annually reviews its relationships and its providers’ relationships with vendors, clients, competitors and regulatory entities to determine conflicts of interest.</p>
-                   <p>When conflicts of interest arise The Outcome Network discloses this conflict of interest when appropriate to whichever client may be involved or affected. The Outcome Network enforces that internal employees of The Outcome Network are not permitted to maintain additional employment, accept gifts (other than those of nominal value) or to allow payment on their behalf of any travel, living or entertainment expense by any person or organization currently doing business with or seeking to conduct business with The Outcome Network, unless approved by the client involved or potentially involved.</p>
-                   <br>
-                   <h5 class="mb-2">Staff Matching Requirements</h5>
-                   <p>The Outcome Network shall verify the Assigned Provider’s licensure, certification, education and work experience to assure they are competent and possess the skills and experience that match requirements for the assignment. Matching the Assigned Provider’s licensure, certification, education and work experience to assure they are competent and possess the skills and experience matching the specified requirements of the assignment may include the use of new grad practitioners upon the request or approval of the customer.</p>
-                   <p>The The Outcome Network office, located in Lake Forest, CA is open Monday through Friday from the hours of 9:00 a.m. – 5:00 p.m.  Our local telephone number is (949) 709-1883.  Outside of normal business hours, in the event of an emergency please contact us at (949) 709-1883.</p>
-                   <p>In the event of an emergency, natural disaster or other uncontrollable event, The Outcome Network will continue to provide service to you through our corporate network form a location where phones and computers are functional.  The Outcome Network will do everything possible to support you in meeting your needs during crisis situation(s).  A copy of our Emergency Management Plan is available upon request.</p>
-                   <p>Our goal is to always provide you with a consistent level of service.  If for any reason you are dissatisfied with our service or the service provided by one of our professionals, we encourage you to contact the local manager to discuss the issue.  The Outcome Network has processes in place to resolve customer complaints in an effective and efficient manner.  If the resolution does not meet your expectation, we encourage you to call the The Outcome Network corporate office at (949) 709-1883. A corporate representative will work with you to resolve your concern.  Any individual or organization that has a concern about the quality and safety of patient care delivered by The Outcome Network professionals, which has not been addressed by The Outcome Network management, is encouraged to contact the Joint Commission at www.jointcommission.org or by calling the Office of Quality Monitoring at (630) 792-5636.  The Outcome Network demonstrates this commitment by taking no retaliatory or disciplinary action against providers when they do report safety or quality of care concerns to the Joint Commission.</p>
+                   <p>We are dedicated to support the person experiencing exceptional needs and their families through a workforce that displays the highest level of ethics, provides exceptional customer service and honor all commitments.</p>
                 </div>
             </div>
         </div>
@@ -241,8 +202,8 @@
                         <h6 class="text-uppercase">About Pecto</h6>
                         <ul class="list-unstyled address">
                             <li><i class="lnr lnr-map-marker"></i><span>387 Madison Ave, New York, NY 10118</span></li>
-                            <li><i class="lnr lnr-envelope"></i><a href="mailto:support@yourname.com">support@yourname.com</a></li>
-                            <li><i class="lnr lnr-phone-handset"></i><span>(+91) 123-456-7890</span></li>
+                            <li><i class="lnr lnr-envelope"></i><a href="mailto:theoutcomenetwork@gmail.com">theoutcomenetwork@gmail.com</a></li>
+                            <li><i class="lnr lnr-phone-handset"></i><span>416-995-9105</span></li>
                         </ul>
                     </div>
                     <div class="col-sm-3 col-xs-6 col-xx-12 mb-4">
