--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
                     <li class="dropdown">
                         <a href="" class="dropdown-toggle" data-toggle="dropdown">Our Story</a>
                         <ul class="dropdown-menu">
+                           <li><a href="about.html">About</a></li>
                            <li><a href="mission.html">Mission</a></li>
                            <li><a href="unique.html">How Are We Unique</a></li>
-                           <li><a href="culture.html">Culture</a></li>
-                           <li><a href="team.html">Leadership Team</a></li>
-                           <li><a href="joint_commision.html">Joint Commission</a></li>
+                           <li><a href="culture.html">Our Culture</a></li>
+                           <li><a href="clients.html">Our Clients</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -94,18 +94,14 @@
                            <li><a href="services.html#behavior">Behavior Supports</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown">
-                        <a href="" class="dropdown-toggle" data-toggle="dropdown">Scholarship</a>
-                        <ul class="dropdown-menu">
-                           <li><a href="">Scholarship Application</a></li>
-                        </ul>
+                    <li>
+                        <a href="employers.html">Employers</a>
                     </li>
                     <li class="dropdown">
                         <a href="" class="dropdown-toggle" data-toggle="dropdown">Career Gateway</a>
                         <ul class="dropdown-menu">
-                           <li><a href="">Testimonials</a></li>
-                           <li><a href="">Application for Employment</a></li>
-                           <li><a href="">Jobs Link</a></li>
+                           <li><a href="testimonial.html">Testimonials</a></li>
+                            <li><a href="application.html">Application for Employment</a></li>
                         </ul>
                     </li>
                      <li class="">
@@ -126,8 +122,8 @@
                 <h6 class="text-uppercase">OFFICE 01</h6>
                 <ul class="list-unstyled address">
                     <li><i class="lnr lnr-map-marker"></i><span>387 Madison Ave, New York, NY 10118</span></li>
-                    <li><i class="lnr lnr-envelope"></i><span>support@yourname.com</span></li>
-                    <li><i class="icon-phone"></i><span>(+91) 123-456-7890</span></li>
+                    <li><i class="lnr lnr-envelope"></i><span>theoutcomenetwork@gmail.com</span></li>
+                    <li><i class="icon-phone"></i><span>416-995-9105</span></li>
                 </ul>
             </div>
             <div class="widget">
@@ -151,8 +147,8 @@
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center">
                     <h1 class="title">The Outcome Network</h1>
-                    <p>A Leader in Workforce Solutions and Behavior Supports.</p>
-                    <a href="#" class="btn btn-default btn-radius btn-outline white-border white-text fill-white">Read More</a>&nbsp;&nbsp; <a href="#" class="btn btn-default animated btn-radius theme-bg white-text">Submit Resume <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+                    <p>A Leader in Workforce Solutions and Behavior Support.</p>
+                    <a href="about.html" class="btn btn-default btn-radius btn-outline white-border white-text fill-white">Read More</a>&nbsp;&nbsp; <a href="#" class="btn btn-default animated btn-radius theme-bg white-text">Submit Resume <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
                 </div>
             </div>
         </div>
@@ -165,21 +161,22 @@
                 <div class="col-md-12">
                     <div class="heading-block text-center">
                         <h2 class="text-uppercase solid-weight">ABOUT The Outcome Network</h2>
-                        <span class="text-uppercase light-weight">The most powerful business network on earth</span>
+                        <span class="text-uppercase light-weight">Our network connect people experiencing disability to support and services all across Ontario</span>
                         <div class="divider"></div>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-6 xs-mb-4">
-                    <p class="lead">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, </p>
-                    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+                    <p class="lead" style="text-align: justify">The Outcome Network is a unique company designed to meet the changing needs in the human services field.  The Outcome Network    has recognized and met the needs of individuals, service providers, families, and staff, to enhance the services being provided to individuals experiencing disabilities. We are a leader in workforce solutions including temporary staffing services; behavior Support; transportation of people supported to their community of belonging; Volunteer supports; translation services ; online training; compliance and program consulting; . The services we provide are as unique and diverse as the agencies and people we work with and are tailored to meet each agency’s specific requirements.</p>
+<!--
                     <ul class="line-icon check mb-3">
                         <li><a href="#">Contrary to popular belief</a></li>
                         <li><a href="#">In a free hour</a></li>
                         <li><a href="#">Written by Cicero in 45 BC</a></li>
                     </ul>
-                    <a href="mission.html" class="btn btn-default btn-radius fill-dark">Read More</a>
+-->
+                    <a href="about.html" class="btn btn-default btn-radius fill-dark">Read More</a>
                 </div>
                 <div class="col-sm-6">
                     <div class="video-info"> <img class="img-responsive center-block" src="images/corporate/image1.jpg" alt="" /> <a class="popup-vimeo video-btn theme-bg" title="Video" href="video/video.mp4"><i class="icon-control-play icons"></i></a> </div>
@@ -673,8 +670,8 @@
                         <h6 class="text-uppercase">About Pecto</h6>
                         <ul class="list-unstyled address">
                             <li><i class="lnr lnr-map-marker"></i><span>387 Madison Ave, New York, NY 10118</span></li>
-                            <li><i class="lnr lnr-envelope"></i><a href="mailto:support@yourname.com">support@yourname.com</a></li>
-                            <li><i class="lnr lnr-phone-handset"></i><span>(+91) 123-456-7890</span></li>
+                            <li><i class="lnr lnr-envelope"></i><a href="mailto:theoutcomenetwork@gmail.com">theoutcomenetwork@gmail.com</a></li>
+                            <li><i class="lnr lnr-phone-handset"></i><span>416-995-9105</span></li>
                         </ul>
                     </div>
                     <div class="col-sm-3 col-xs-6 col-xx-12 mb-4">
