--- a/team.html
+++ b/team.html
@@ -129,9 +129,8 @@
                     <li class="dropdown">
                         <a href="" class="dropdown-toggle" data-toggle="dropdown">Career Gateway</a>
                         <ul class="dropdown-menu">
-                           <li><a href="">Testimonials</a></li>
-                           <li><a href="">Application for Employment</a></li>
-                           <li><a href="">Jobs Link</a></li>
+                           <li><a href="testimonial.html">Testimonials</a></li>
+                            <li><a href="application.html">Application for Employment</a></li>
                         </ul>
                     </li>
                      <li class="">
