--- a/contact.html
+++ b/contact.html
@@ -90,11 +90,11 @@
                     <li class="dropdown">
                         <a href="" class="dropdown-toggle" data-toggle="dropdown">Our Story</a>
                         <ul class="dropdown-menu">
+                           <li><a href="about.html">About</a></li>
                            <li><a href="mission.html">Mission</a></li>
                            <li><a href="unique.html">How Are We Unique</a></li>
-                           <li><a href="culture.html">Culture</a></li>
-                           <li><a href="team.html">Leadership Team</a></li>
-                           <li><a href="joint_commision.html">Joint Commission</a></li>
+                           <li><a href="culture.html">Our Culture</a></li>
+                           <li><a href="clients.html">Our Clients</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -105,18 +105,14 @@
                            <li><a href="services.html#behavior">Behavior Supports</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown">
-                        <a href="" class="dropdown-toggle" data-toggle="dropdown">Scholarship</a>
-                        <ul class="dropdown-menu">
-                           <li><a href="">Scholarship Application</a></li>
-                        </ul>
+                    <li>
+                        <a href="employers.html">Employers</a>
                     </li>
                     <li class="dropdown">
                         <a href="" class="dropdown-toggle" data-toggle="dropdown">Career Gateway</a>
                         <ul class="dropdown-menu">
-                           <li><a href="">Testimonials</a></li>
-                           <li><a href="">Application for Employment</a></li>
-                           <li><a href="">Jobs Link</a></li>
+                           <li><a href="testimonial.html">Testimonials</a></li>
+                            <li><a href="application.html">Application for Employment</a></li>
                         </ul>
                     </li>
                      <li class="">
@@ -137,8 +133,8 @@
                         <h6 class="text-uppercase">OFFICE 01</h6>
                         <ul class="list-unstyled address">
                            <li><i class="lnr lnr-map-marker"></i><span>387 Madison Ave, New York, NY 10118</span></li>
-                           <li><i class="lnr lnr-envelope"></i><span>support@yourname.com</span></li>
-                           <li><i class="icon-phone"></i><span>(+91) 123-456-7890</span></li>
+                           <li><i class="lnr lnr-envelope"></i><span>theoutcomenetwork@gmail.com</span></li>
+                    <li><i class="icon-phone"></i><span>416-995-9105</span></li>
                         </ul>
                      </div>
                      <div class="widget">
@@ -189,8 +185,8 @@
                      <h4 class="solid-weight text-uppercase">Contact Info</h4>
                      <ul class="icon-list2 lead">
                         <li><span class="lnr lnr-map-marker"></span><span>McCauley Edmonton <br> AB, Canada</span></li>
-                        <li><span class="lnr lnr-envelope"></span>support@yourname.com</li>
-                        <li><span class="lnr lnr-phone-handset"></span>(415) 124-5678</li>
+                        <li><span class="lnr lnr-envelope"></span>theoutcomenetwork@gmail.com</li>
+                        <li><span class="lnr lnr-phone-handset"></span>416-995-9105</li>
                      </ul>
                      <div class="mt-2">
                         <div class="opening_time col-sm-9">
@@ -228,8 +224,8 @@
                         <h6 class="text-uppercase">About Pecto</h6>
                         <ul class="list-unstyled address">
                            <li><i class="lnr lnr-map-marker"></i><span>387 Madison Ave, New York, NY 10118</span></li>
-                           <li><i class="lnr lnr-envelope"></i><a href="mailto:support@yourname.com">support@yourname.com</a></li>
-                           <li><i class="lnr lnr-phone-handset"></i><span>(+91) 123-456-7890</span></li>
+                           <li><i class="lnr lnr-envelope"></i><a href="mailto:support@yourname.com">theoutcomenetwork@gmail.com</a></li>
+                           <li><i class="lnr lnr-phone-handset"></i><span>416-995-9105</span></li>
                         </ul>
                      </div>
                      <div class="col-sm-3 col-xs-6 col-xx-12 mb-4">
