--- a/employers.html
+++ b/employers.html
@@ -79,31 +79,32 @@
             <!-- Start Header Navigation -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu"> <i class="fa fa-bars"></i> </button>
-                <a class="navbar-brand" href="index.html"><img style="width: 150px" src="images/brand/logo-1.png" class="logo logo-scrolled" alt=""> </a>
+                <a class="navbar-brand" href="index.html"><img style="width: 150px" src="images/brand/logo-1.png"
+                 class="logo logo-scrolled"  alt=""> </a>
             </div>
             <!-- End Header Navigation -->
             <!-- Megamenu -->
             <div class="collapse navbar-collapse" id="navbar-menu">
                 <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
                     <li class="active ">
-                        <a href="index.html">Home</a>
+                        <a href="index.html" >Home</a>
                     </li>
                     <li class="dropdown">
                         <a href="" class="dropdown-toggle" data-toggle="dropdown">Our Story</a>
                         <ul class="dropdown-menu">
-                            <li><a href="about.html">About</a></li>
-                            <li><a href="mission.html">Mission</a></li>
-                            <li><a href="unique.html">How Are We Unique</a></li>
-                            <li><a href="culture.html">Our Culture</a></li>
-                            <li><a href="clients.html">Our Clients</a></li>
+                           <li><a href="about.html">About</a></li>
+                           <li><a href="mission.html">Mission</a></li>
+                           <li><a href="unique.html">How Are We Unique</a></li>
+                           <li><a href="culture.html">Our Culture</a></li>
+                           <li><a href="clients.html">Our Clients</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
                         <a href="services.html" class="dropdown-toggle" data-toggle="dropdown">Services</a>
                         <ul class="dropdown-menu">
-                            <li><a href="services.html#staffing">Staffing</a></li>
-                            <li><a href="services.html#transportation">Transportation</a></li>
-                            <li><a href="services.html#behavior">Behavior Supports</a></li>
+                           <li><a href="services.html#staffing">Staffing</a></li>
+                           <li><a href="services.html#transportation">Transportation</a></li>
+                           <li><a href="services.html#behavior">Behavior Supports</a></li>
                         </ul>
                     </li>
                     <li>
@@ -112,12 +113,12 @@
                     <li class="dropdown">
                         <a href="" class="dropdown-toggle" data-toggle="dropdown">Career Gateway</a>
                         <ul class="dropdown-menu">
-                            <li><a href="testimonial.html">Testimonials</a></li>
+                           <li><a href="testimonial.html">Testimonials</a></li>
                             <li><a href="application.html">Application for Employment</a></li>
                         </ul>
                     </li>
-                    <li class="">
-                        <a href="contact.html">Contact Us</a>
+                     <li class="">
+                        <a href="contact.html" >Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -158,15 +159,8 @@
         <div class="container">
             <div class="row intro-title">
                 <div class="col-sm-12 text-center">
-                    <h1 class="title">Our Culture</h1>
+                    <h1 class="title">Our Service Providers</h1>
                 </div>
-                <!--
-                <div class="col-sm-12">
-                    <div class="row">
-                        <div class="col-sm-12 col-md-8 col-md-offset-2 text-center"><span class="sub-title">Our culture is unique. Our drive to empower. Our passion, to make a difference.</span></div>
-                    </div>
-                </div>
--->
             </div>
         </div>
     </section>
@@ -175,35 +169,29 @@
     <section class="">
         <div class="container">
             <div class="row">
-                <div class="col-md-12  text-left">
-                    <p class="lead">We will foster a positive team environment by:</p>
-                    <ul class="ml-5">
-                        <li>Putting ethics above all else</li>
-                        <li>Treating everyone fairly</li>
-                        <li>Supporting each other</li>
-                        <li>Balancing work and life</li>
-                    </ul>
+                <div class="col-md-12 text-left mt-1 ">
+                   <p>The Outcome Network will provide you with quality staff and lower costs for everyone. We understand that staffing is about more than just filling a position. Our focus is to actively recruit and carefully screen direct support professionals to provide the trusted network of the best healthcare talent when your need arises.</p>
                 </div>
             </div>
         </div>
     </section>
     <section class="inner-intro small-intro theme-bg">
-        <div class="container">
-            <div class="row intro-title">
-                <div class="col-sm-12 text-center">
-                    <h1 class="title">The Outcome Network</h1>
-                </div>
-                <div class="col-sm-12">
-                    <div class="row">
-                        <div class="col-sm-12 text-center"><span class="sub-title">Our network connect people experiencing disability to support and services all across Ontario</span></div>
+            <div class="container">
+               <div class="row intro-title">
+                  <div class="col-sm-12 text-center">
+                     <h1 class="title">The Outcome Network</h1>
+                  </div>
+                  <div class="col-sm-12">
+                     <div class="row">
+                        <div class="col-sm-12 text-center"><span class="sub-title">The most powerful business network on earth</span></div>
                         <div style="display: flex;justify-content: center; width: 100%;padding-top: 30px;">
                             <a href="#" class=" btn btn-default btn-outline animated btn-radius white-border theme-bg white-text fill-white">Submit Resume <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
                         </div>
-                    </div>
-                </div>
+                     </div>
+                  </div>
+               </div>
             </div>
-        </div>
-    </section>
+         </section>
     <!-- End Our service -->
     <!-- Footer -->
     <footer class="footer-dark">
