--- a/mission.html
+++ b/mission.html
@@ -92,11 +92,11 @@
                     <li class="dropdown">
                         <a href="" class="dropdown-toggle" data-toggle="dropdown">Our Story</a>
                         <ul class="dropdown-menu">
+                           <li><a href="about.html">About</a></li>
                            <li><a href="mission.html">Mission</a></li>
                            <li><a href="unique.html">How Are We Unique</a></li>
-                           <li><a href="culture.html">Culture</a></li>
-                           <li><a href="team.html">Leadership Team</a></li>
-                           <li><a href="joint_commision.html">Joint Commission</a></li>
+                           <li><a href="culture.html">Our Culture</a></li>
+                           <li><a href="clients.html">Our Clients</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -107,18 +107,14 @@
                            <li><a href="services.html#behavior">Behavior Supports</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown">
-                        <a href="" class="dropdown-toggle" data-toggle="dropdown">Scholarship</a>
-                        <ul class="dropdown-menu">
-                           <li><a href="">Scholarship Application</a></li>
-                        </ul>
+                    <li>
+                        <a href="employers.html">Employers</a>
                     </li>
                     <li class="dropdown">
                         <a href="" class="dropdown-toggle" data-toggle="dropdown">Career Gateway</a>
                         <ul class="dropdown-menu">
-                           <li><a href="">Testimonials</a></li>
-                           <li><a href="">Application for Employment</a></li>
-                           <li><a href="">Jobs Link</a></li>
+                           <li><a href="testimonial.html">Testimonials</a></li>
+                            <li><a href="application.html">Application for Employment</a></li>
                         </ul>
                     </li>
                      <li class="">
@@ -139,8 +135,8 @@
                 <h6 class="text-uppercase">OFFICE 01</h6>
                 <ul class="list-unstyled address">
                     <li><i class="lnr lnr-map-marker"></i><span>387 Madison Ave, New York, NY 10118</span></li>
-                    <li><i class="lnr lnr-envelope"></i><span>support@yourname.com</span></li>
-                    <li><i class="icon-phone"></i><span>(+91) 123-456-7890</span></li>
+                    <li><i class="lnr lnr-envelope"></i><span>theoutcomenetwork@gmail.com</span></li>
+                    <li><i class="icon-phone"></i><span>416-995-9105</span></li>
                 </ul>
             </div>
             <div class="widget">
@@ -163,13 +159,15 @@
         <div class="container">
             <div class="row intro-title">
                 <div class="col-sm-12 text-center">
-                    <h1 class="title">Mission</h1>
+                    <h1 class="title">Our Mission</h1>
                 </div>
+<!--
                 <div class="col-sm-12">
                     <div class="row">
                         <div class="col-sm-12 text-center"><span class="sub-title">Our mission is to harness the power.</span></div>
                     </div>
                 </div>
+-->
             </div>
         </div>
     </section>
@@ -179,13 +177,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12  text-left">
-                    <p class="lead">Our mission is to harness the power of personal touch by connecting top talent to great organizations.
-                        <br>
-                        <br>
-                        Our partnerships are grounded in honesty, integrity, and personal engagement. We're passionate about making a difference in the lives of others by giving back to the communities we serve. Our scholarship program empowers people to pursue their dreams, improve their lives, and care for others.
-                        <br><br>
-
-                        Our employees are dedicated to continuous growth and are relentless about creating outcomes that benefit our clients and community.</p>
+                    <p class="lead">Our mission is to be the staffing provider and employer of choice that direct support professionals and service providers consider a vital partner in achieving their goals.</p>
                 </div>
             </div>
         </div>
@@ -198,7 +190,7 @@
                   </div>
                   <div class="col-sm-12">
                      <div class="row">
-                        <div class="col-sm-12 text-center"><span class="sub-title">The most powerful business network on earth</span></div>
+                        <div class="col-sm-12 text-center"><span class="sub-title">Our network connect people experiencing disability to support and services all across Ontario</span></div>
                         <div style="display: flex;justify-content: center; width: 100%;padding-top: 30px;">
                             <a href="#" class=" btn btn-default btn-outline animated btn-radius white-border theme-bg white-text fill-white">Submit Resume <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
                         </div>
@@ -217,8 +209,8 @@
                         <h6 class="text-uppercase">About Pecto</h6>
                         <ul class="list-unstyled address">
                             <li><i class="lnr lnr-map-marker"></i><span>387 Madison Ave, New York, NY 10118</span></li>
-                            <li><i class="lnr lnr-envelope"></i><a href="mailto:support@yourname.com">support@yourname.com</a></li>
-                            <li><i class="lnr lnr-phone-handset"></i><span>(+91) 123-456-7890</span></li>
+                            <li><i class="lnr lnr-envelope"></i><a href="mailto:theoutcomenetwork@gmail.com">theoutcomenetwork@gmail.com</a></li>
+                            <li><i class="lnr lnr-phone-handset"></i><span>416-995-9105</span></li>
                         </ul>
                     </div>
                     <div class="col-sm-3 col-xs-6 col-xx-12 mb-4">
